Fix horizontal scrolling on main content

--- a/puzzle_editing/static/css/general.css
+++ b/puzzle_editing/static/css/general.css
@@ -186,7 +186,6 @@ input[type="submit"]:hover, button:hover {
 	display: flex;
 	width: 100vw;
 	height: 100vh;
-	overflow: scroll;
 }
 
 nav {
@@ -474,6 +473,8 @@ nav a:visited {
 
 main {
 	padding: 30px;
+	flex: 1 1 300px;
+	overflow: scroll;
 }
 h1 { font-size: 180%; margin-top: 0; }
 h2 { font-size: 120%; font-weight: normal; }
